--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,6 +13,11 @@ JWT_EXPIRE=7d
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=uploads/cards
 
+# Supabase Storage (for card images)
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_BUCKET=card-images
+
 # Admin Seeding
 ADMIN_EMAIL=admin@dexi.com
 ADMIN_PASSWORD=Admin@123
