--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
