adding admin login

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,6 +22,7 @@ SUPABASE_BUCKET=card-images
 ADMIN_EMAIL=admin@dexi.com
 ADMIN_PASSWORD=Admin@123
 ADMIN_NAME=Admin User
+ADMIN_RESET_PASSWORD_ON_STARTUP=false
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
